[metadata]
author = The SDCflows developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
description = Susceptibility Distortion Correction (SDC) workflows for EPI MR schemes.
license = Apache-2.0
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Documentation = https://www.nipreps.org/sdcflows
    GitHub = https://github.com/nipreps/sdcflows
    fMRIPrep = https://fmriprep.readthedocs.io
url = https://www.nipreps.org/sdcflows

[options]
python_requires = >=3.5
setup_requires =
    setuptools >= 42.0
    setuptools_scm >= 3.4
    toml
install_requires =
    nibabel >=3.0.1
    niflow-nipype1-workflows ~= 0.0.1
    nipype >=1.3.1,<2.0
    niworkflows >= 1.2.0,<1.4
    numpy
    pybids >= 0.10.2
    templateflow >=0.4
test_requires =
    codecov
    coverage
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    sphinx ~= 4.2
    pydot >= 1.2.3
    pydotplus
    furo ~= 2021.10.09
    sphinxcontrib-apidoc
    sphinxcontrib-napoleon
docs =
    %(doc)s
tests =
    pytest
    pytest-xdist
    pytest-cov == 2.5.1
    coverage
all =
    %(doc)s
    %(tests)s

[options.package_data]
sdcflows =
    data/*.json
    data/*.nii.gz
    data/*.mat
    VERSION

[options.entry_points]
console_scripts =
    sdcflows=sdcflows.cli.run:main

[versioneer]
VCS = git
style = pep440
versionfile_source = sdcflows/_version.py
versionfile_build = sdcflows/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude =
    *build/
    docs/sphinxext/
    docs/tools/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501

[tool:pytest]
norecursedirs = .git
addopts = -vsx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore:cmp not installed:UserWarning
    ignore:This has not been fully tested:UserWarning
