[metadata]
author = The SDCflows developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Susceptibility Distortion Correction (SDC) workflows for EPI MR schemes.
license = Apache-2.0
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
name = sdcflows
project_urls =
    Documentation = https://www.nipreps.org/sdcflows
    GitHub = https://github.com/nipreps/sdcflows
    fMRIPrep = https://fmriprep.readthedocs.io
url = https://www.nipreps.org/sdcflows

[options]
python_requires = >=3.8
setup_requires =
    setuptools >= 42.0
    setuptools_scm >= 3.4
    setuptools_scm_git_archive
    toml
install_requires =
    attrs >= 20.1.0
    nibabel >=3.1.0
    nipype >=1.8.5,<2.0
    traits <6.4
    niworkflows >= 1.7.0
    nitransforms >= 21.0.0
    numpy >= 1.21.0
    pybids >= 0.15.1
    scikit-image >= 0.18
    scipy >= 1.8.1
    templateflow
packages = find:
include_package_data = True
zip_safe = True

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    furo ~= 2021.10.09
    pydot
    pydotplus
    sphinx
    sphinxcontrib-apidoc
    sphinxcontrib-napoleon
docs =
    %(doc)s
mem =
    psutil

test =
    coverage
    pytest
    pytest-cov
    pytest-env
    pytest-xdist
tests =
    %(test)s

all =
    %(doc)s
    %(mem)s
    %(test)s

[options.package_data]
sdcflows =
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/flirtsch/*.cnf

[options.entry_points]
console_scripts =
    sdcflows-find-estimators=sdcflows.cli.find_estimators:main

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E231
    E203
exclude =
    *build/
    docs/sphinxext/
    docs/tools/
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -vsx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE NUMBER
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore:cmp not installed:UserWarning
    ignore:This has not been fully tested:UserWarning

[coverage:run]
concurrency = multiprocessing
